<resources>
    <string name="app_name">FirstAppagain</string>
    <string name="Aboutme">about_me</string>
    <string name="about_me">Aboutme</string>
    <string name="Prangwalai">name</string>
    <string name="name">Name: Prangwalai Littisorn</string>
    <string name="age">I\'m 21 year old</string>
    <string name="study">I\'m study at Computer Science</string>
    <string name="motto">Someday I want to be a Programmer</string>
    <string name="contact">Contact</string>
    <string name="hello_blank_fragment">Hello Blank</string>
    <string name="add">Add name</string>
    <string name="add_name">AddName</string>
    <string name="add_word">add_name</string>
    <string name="about">aboutme</string>
    <string name="adduser">addcontact</string>
    <string name="hint_word">hint_add</string>
    <string name="hint_add">hint_add</string>
    <string name="button_save">save</string>
    <string name="img1">img1</string>
    <string name="button_add">Add</string>
    <string name="welcome">WELCOME</string>
</resources>